--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -48,17 +48,17 @@
                 android:id="@+id/cover_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layout_columnSpan="1"
+                app:layout_rowSpan="4"
                 android:background="@color/black"
                 android:scaleType="centerCrop"
-                android:src="@drawable/icon"
-                app:column_span="1"
-                app:row_span="4" />
+                android:src="@drawable/icon" />
 
             <ScrollView
                 android:id="@+id/synopsis_container"
                 style="@style/detail_item"
-                app:column_span="3"
-                app:row_span="4" >
+                app:layout_columnSpan="3"
+                app:layout_rowSpan="4" >
 
                 <TextView
                     android:id="@+id/synopsis"
@@ -70,9 +70,9 @@
             <LinearLayout
                 android:id="@+id/watched_panel"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
-                android:visibility="gone"
-                app:column_span="1" >
+                android:visibility="gone" >
 
                 <TextView
                     android:id="@+id/watched_count"
@@ -93,8 +93,8 @@
             <LinearLayout
                 android:id="@+id/status_panel"
                 style="@style/detail_item"
-                android:visibility="gone"
-                app:column_span="1" >
+                app:layout_columnSpan="1"
+                android:visibility="gone" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -115,8 +115,8 @@
             <LinearLayout
                 android:id="@+id/score_panel"
                 style="@style/detail_item"
-                android:visibility="gone"
-                app:column_span="1" >
+                app:layout_columnSpan="1"
+                android:visibility="gone" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -137,10 +137,10 @@
             <LinearLayout
                 android:id="@+id/add_panel"
                 style="@style/detail_item"
+                app:layout_columnSpan="5"
                 android:gravity="center"
                 android:visibility="gone"
-                android:weightSum="5"
-                app:column_span="5" >
+                android:weightSum="5" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -169,10 +169,10 @@
             <LinearLayout
                 android:id="@+id/information_container"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
+                app:layout_rowSpan="2"
                 android:orientation="vertical"
-                android:visibility="gone"
-                app:column_span="1"
-                app:row_span="2" >
+                android:visibility="gone" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -187,33 +187,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                     />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/classification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/statistics_container"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
+                app:layout_rowSpan="2"
                 android:orientation="vertical"
-                android:visibility="gone"
-                app:column_span="1"
-                app:row_span="2" >
+                android:visibility="gone" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -221,97 +218,91 @@
                     android:layout_gravity="center_vertical|left"
                     android:layout_marginBottom="4dp"
                     android:text="@string/statistics"
-                    android:textStyle="bold" 
-                    />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/popularity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/member_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/member_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
 
                 <TextView
                     android:id="@+id/favorited_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:layout_marginBottom="4dp"
-                    />
+                    android:layout_marginBottom="4dp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/prequel"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/sequel"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/side_story"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/spin_offs"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/summaries"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/alternative_versions"
                 style="@style/detail_item"
+                app:layout_columnSpan="1"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:visibility="gone"
-                app:column_span="1" />
+                android:visibility="gone" />
         </com.github.riotopsys.pannellayout.PannelLayout>
     </ScrollView>
 
